--- a/StartAudioInTheBackground/MainPage.xaml
+++ b/StartAudioInTheBackground/MainPage.xaml
@@ -8,6 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock x:Name="status" FontSize="24" TextWrapping="Wrap"/>
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button x:Name="recordButton" Content="Record" Click="RecordButton_Click"/>
+            <TextBlock x:Name="statusText" FontSize="24" TextWrapping="Wrap" Margin="0, 10"/>
+        </StackPanel>
     </Grid>
 </Page>
