--- a/StartAudioInTheBackground/MainPage.xaml
+++ b/StartAudioInTheBackground/MainPage.xaml
@@ -8,6 +8,15 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <NavigationView Grid.Row="1" AlwaysShowHeader="False" CompactModeThresholdWidth="1920" ExpandedModeThresholdWidth="1920">
+            <NavigationView.MenuItems>
+                <NavigationViewItem>
+                    <TextBlock>
+                    <Span xml:space="preserve"><Hyperlink Click="Exit_Click">Exit</Hyperlink></Span>
+                    </TextBlock>
+                </NavigationViewItem>
+            </NavigationView.MenuItems>
+        </NavigationView>
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button x:Name="recordButton" Content="Record" Click="RecordButton_Click"/>
             <TextBlock x:Name="statusText" FontSize="24" TextWrapping="Wrap" Margin="0, 10"/>
